// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div>
      <ExpenseListItem
        amount={50}
        createdAt={0}
        description="Gum bill"
        id="1"
        key="1"
        note="Test note"
      />
      <ExpenseListItem
        amount={25000}
        createdAt={-345600000}
        description="Rent bill"
        id="2"
        key="2"
        note="Test note"
      />
      <ExpenseListItem
        amount={50000}
        createdAt={345600000}
        description="Credit bill"
        id="3"
        key="3"
        note="Test note"
      />
    </div>
  </div>
</div>
`;

exports[`Should render expenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
